ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ing-test
 namespace: uat
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: nginx
 rules:
  - host: "normal.example.com"
    http:
     paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
          name: normal-deploy
          port:
           number: 80
  - host: "video.example.com"
    http:
     paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
          name: video-deploy
          port:
           number: 80
  - host: "image.example.com"
    http:
     paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
          name: image-deploy
          port:
           number: 80
